criacao da documentacao swagguer para a listagem dos equipamentos
